Added start game button to Simon game screen

--- a/simon-style.css
+++ b/simon-style.css
@@ -110,7 +110,7 @@
     bottom: 605px;
 }
 
-.simon-game-exit-btn {
+.simon-game-btn {
     font: 30px Arial;
     text-decoration: none;
     background-color: black;
