Implemented text input on Simon gameboard and adjusted the styling to make it look good

--- a/simon-style.css
+++ b/simon-style.css
@@ -46,8 +46,10 @@
 .board-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    height: 600px;
+    overflow: hidden;
 }
 
 .quadrant {
@@ -145,7 +147,6 @@
     border: 2px solid black;
     border-radius: 10px;
     position: relative;
-    bottom: 420px;
 }
 
 /* Game Messages */
